Updated configuration