@@ -17,6 +17,7 @@
 		<maven.compiler.target>14</maven.compiler.target>
 		<junit.version>5.8.2</junit.version>
 		<jaxb-runtime.version>2.3.2</jaxb-runtime.version>
+		<jaxws.version>2.3.3</jaxws.version>
 	</properties>
 
 	<repositories>
@@ -122,6 +123,16 @@
 			<artifactId>swagger-ui</artifactId>
 			<version>3.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+			<version>${jaxws.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-tools</artifactId>
+			<version>${jaxws.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -176,7 +187,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+						--add-opens java.base/sun.security.action=ALL-UNNAMED
+					</argLine>
+				</configuration>
 			</plugin>
 
 			<plugin>
